<resources>
    <string name="app_name">SmartGroceries</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="imageDescription">Logo</string>
    <string name="btn_login">Login</string>
    <string name="newAccountText">New Here?</string>
    <string name="newAccountLink">Create An Account</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="profile_photo">Settings</string>

    <!--this gonna be a the username of the user logged in -->
    <string name="logged_in_username">Joao Romao</string>

    <!--activity_optionsdrawer_drawer.xtl-->
    <string name="scan_product">Scan Product</string>
    <string name="nav_signOut">Sign Out</string>
    <string name="nav_exit">Exit</string>

    <!--content main2.xml-->
    <string name="scan_product_btn">Scan Product</string>
    <string name="upc_code">UPC code</string>
    <string name="nav_user_profile">Profile</string>
    <string name="nav_start_shopping">Start Shopping</string>


    <!--TODO: text for the register activity-->
    <string name="reg_createAccount_txt">Create an account</string>
    <string name="reg_name">Name</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Password</string>
    <string name="reg_signIn">Sign In</string>
    <string name="reg_haveAccount">Have an Account?</string>
    <string name="reg_createAccount_btn">Create Account</string>
    <string name="reg_haveAcc_txt">Have an account?</string>
    <string name="reg_policy">By clicking on \"Create Account\" you agree to \nour Terms of Use and Privacy Policy</string>

    <!--profile fragment-->
    <string name="prof_pic">Profile photo </string>
    <string name="prof_firstName">First Name: </string>
    <string name="prof_lastName">Last Name: </string>
    <string name="prof_email">Email: </string>
    <string name="prof_dateJoined">Date Joined: </string>
    <string name="title_activity_teste">teste</string>
    <string name="edit_btn">Edit Details</string>
    <string name="shoppingList_btn">My Shopping List</string>


    <!--result fragment -->
    <string name="r_upcCode">UPC Code: </string>

    <!--listView product-->
    <string name="pl_image_desc">product logo</string>

    <!--product fragment -->
    <string name="pf_total">Total:</string>
    <string name="btn_checkout">Checkout</string>

    <!--Advertise products-->
    <string name="add_title">Hurry Up! Get these\n best deals while they last</string>

    <!--line product scanned-->
    <string name="lps_imgView">Image product scanned</string>
    <string name="lps_prodUnits">Units:</string>#

    <!--product details fragment-->
    <string name="pd_img_descrip">Product Image.</string>
    <string name="pd_expire_Date">Expire Date: </string>
    <string name="placeHolder">pace holder </string>
    <string name="pd_back">Back </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
