<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="co.devhut.smartgroceries.Profile_Fragment">

    <!-- TODO: Update blank fragment layout -->


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="233dp"
        android:layout_height="151dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/profile_photo"
        android:src="@drawable/d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="316dp"
        android:layout_height="600dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <TableRow>

            <TextView
                android:id="@+id/prof_nameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:divider="?android:attr/dividerHorizontal"
                android:showDividers="middle"
                android:text="@string/prof_firstName"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/prof_nameDb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/prof_surnameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:divider="?android:attr/dividerHorizontal"
                android:showDividers="middle"
                android:text="@string/prof_lastName"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/prof_surnameDb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/prof_emailTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:divider="?android:attr/dividerHorizontal"
                android:showDividers="middle"
                android:text="@string/prof_email"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/prof_emailDb"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/prof_dateJoinnedTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:divider="?android:attr/dividerHorizontal"
                android:showDividers="middle"
                android:text="@string/prof_dateJoined"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/prof_dateJoinnedDb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>
